# harissa

./: .gitattributes  .gitignore  AUTHORS  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: pypi.yml
Tutorials/: README.md  demo1.py  demo2.py  net0.py
docs/: README.md
docs/examples/: index.md
examples/: README.md  data.txt  demo2.py  network4.py  notebook1.ipynb  notebook2.ipynb  notebook3.ipynb  repressilator.py  test.py  test_data.txt
harissa/: __init__.py
harissa/autoactiv/: __init__.py  core.py  graphics.py  interface.py  model.py  scdata.py  utils.py
harissa/automodel/: __init__.py  config.py  core.py  graphics.py  model.py  result.py  sumproduct.py  utils.py  vtheta.py
harissa/generator/: __init__.py  cascade.py  tree.py
harissa/graphics/: __init__.py  graph_layout.py  plot_data.py  plot_distances.py  plot_network.py  plot_network_backup.py  plot_network_var.py  plot_obj.py  plot_proteins.py  plot_sim.py
harissa/grnsim/: __init__.py  core.py  default.py  graphics.py  model.py  utils.py
harissa/grnsim/networks/: __init__.py  cascade.py  loader.py  net0.py
harissa/inference/: __init__.py  filtering.py  kinetics.py  network.py  network_backup.py  network_fast.py  network_old.py  sincerities.py  var.py
harissa/inference/tests/: test_filtering.py
harissa/model/: base.py  cascade.py  tree.py
harissa/networks/: __init__.py  net0.py  net0bursty.py
harissa/simulation/: __init__.py  base.py  ode.py  pdmp.py  pdmp_fast.py
harissa/tests/: test_grnsim.py
harissa/utils/: __init__.py  plot_network.py  plot_network_var.py  plot_proteins.py  plot_sim.py  processing.py
notebooks/: README.md  notebook1.ipynb  notebook2.ipynb  notebook3.ipynb
src/harissa/: __init__.py
src/harissa/inference/: __init__.py  kinetics.py  network.py  network_fast.py
src/harissa/model/: __init__.py  base.py  cascade.py  (+1 more)
tests/: README.md  demo1.py  network4.py  pathways.py  repressilator.py  test0.ipynb  test_binarize.py  test_bursty_base.py  test_plot_network.py  tests.html  tests.ipynb  tests.py
tutorials/: README.md  demo1.py  demo2.py  demo3.py  net0.py
(+11 files in other folders)
